--- a/project/styles/main.css
+++ b/project/styles/main.css
@@ -93,7 +93,7 @@ nav {
 }
 
 .hero-btn {
-    background-color: #f44336;
+    background-color: black;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -102,7 +102,7 @@ nav {
 }
 
 .hero-btn:hover {
-    background-color: #d32f2f;
+    background-color: #971818;
 }
 
 .section-header {
@@ -176,7 +176,7 @@ nav a {
     position: absolute;
     top: 0;
     left: 0;
-    width: 400px;
+    width: 450px;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
